Move Declaration File and test to project root

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "transform": {
       "\\.(ts)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "/src/.*\\.spec.(ts|js)$"
+    "testRegex": "/.*\\.spec.(ts|js)$"
   }
 }
