--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "lint": "tslint --project tsconfig.json --config tslint.json"
   },
   "devDependencies": {
-    "@types/geojson": "7946.0.2",
-    "@types/jest": "^22.2.3",
-    "@types/node": "9.6.5",
-    "jest": "^22.4.3",
-    "ts-jest": "^22.4.3",
-    "tslint": "^5.9.1",
-    "typescript": "2.8.1"
+    "@types/geojson": "7946.0.3",
+    "@types/jest": "22.2.3",
+    "@types/node": "10.0.9",
+    "jest": "22.4.3",
+    "ts-jest": "22.4.6",
+    "tslint": "5.10.0",
+    "typescript": "2.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
