--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "pretest": "npm run lint",
     "test": "jest",
     "lint": "tslint --project tsconfig.json --config tslint.json",
-    "release": "np --no-yarn"
+    "release": "np --no-yarn && git push https://github.com/terrestris/geostyler-data.git master --tags"
   },
   "devDependencies": {
-    "@types/node": "10.11.3",
+    "@types/node": "10.12.0",
     "@types/json-schema": "7.0.1",
     "@types/geojson": "7946.0.4",
     "@types/jest": "23.3.6",
