--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geostyler-data",
-  "version": "0.5.1",
+  "version": "0.5.2-0",
   "description": "TypeScript Declaration File for the Data models of the GeoStyler project.",
   "main": "src/@types/geostyler-data/index.d.ts",
   "repository": {
